# nws_sent

./: .gitignore  README.md  config.json  requirements.txt
analysis/: pyproject.toml  requirements.txt
analysis/src/analytics_engine/: __init__.py  model_trainer.py  predict.py  predictor.py  server.py  stream_trainer.py  train.py
analytics_engine/: pyproject.toml
analytics_engine/src/: model_trainer.py  predict.py  predictor.py  server.py  stream_trainer.py  train.py
data/: sample.csv
design/: .$Untitled Diagram.drawio.bkp  .$diagrams.drawio.bkp  diagrams.drawio
docker/: middleware.dockerfile  model.dockerfile  nutch.dockerfile  solr.dockerfile
middleware/: go.mod  m
middleware/core/: analytics.go  config.go  http.go  queue.go
middleware/http/: api.go  server.go
middleware/solr/: doc.go  job.go  solr.go
